--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: agentic-scam-honeypot
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: GEMINI_API_KEY
+        sync: false
+      - key: HONEYPOT_API_KEY
         sync: false
